# simple-ckks

./: .clangd  .gitignore  BUILD_README.md  CMakeLists.txt  README.md  build-arm.sh  build.sh  clean.sh  quick-build-arm.sh  toolchain-aarch64.cmake
.cache/clangd/index/: BigInt.h.62034E58E52F1A0C.idx  ciphertext.cpp.EEA36C09FDE10FBE.idx  ciphertext.h.E2535AB3F907DECD.idx  ckks_demo.cpp.9660D260E571B37F.idx  encoder.cpp.4BF7AE1F3ED70E84.idx  encoder.cpp.E97BA428B68A8995.idx  encoder.h.C35D7CCB46ACC64F.idx  encryptor.cpp.5FF7E4804C066E07.idx  encryptor.cpp.9EB579FE0E2CC38E.idx  encryptor.h.5D7A21D9993921AC.idx  evaluation_key.cpp.97E94DDE74CA0F74.idx  evaluation_key.h.6442ED09F97D01EC.idx  evaluator.cpp.20E4430552675E18.idx  evaluator.cpp.83CA811430316B06.idx  (+39 more)
.claude/: settings.local.json
.github/workflows/: workflow.yml
.zed/: settings.json
build-arm/: ckks_demo  ckks_demo_noio  ckks_demo_stripped  tests[1]_include.cmake
demo/: ckks_demo.cpp
include/simple_ckks/: ciphertext.h  encoder.h  encryptor.h  evaluation_key.h  evaluator.h  keygen.h  parameters.h  plaintext.h  public_key.h  rand_util.h  secret_key.h  simple_ckks.h  util.h
lib/: BigInt.h
src/: ciphertext.cpp  encoder.cpp  encryptor.cpp  evaluation_key.cpp  evaluator.cpp  keygen.cpp  parameters.cpp  plaintext.cpp  public_key.cpp  rand_util.cpp  secret_key.cpp  util.cpp
src/math/: ntt_transformer.cpp  rns_converter.cpp  rns_transformer.cpp
test/: encoder.cpp  encryptor.cpp  evaluator.cpp
test/math/: ntt_transformer.cpp
tools/: find_primes.cpp  find_primes_bitsize.cpp
(+4 files in other folders)
